--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 
-<body onload="action.js">
+<body onload="redirect()">
 </body>
+
+<script type="text/javascript">
+  function redirect()
+{
+    var looting= "Looting information here"
+    window.location.href = "mailto:?to=info@santamonica.gov&subject="+ looting+"";  
+}
+</script>
