--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     x[9] = "Value";
     x[10] = "Value";
     
-    var looting= x.get(Math.floor((Math.random() * 10) + 1);
+    var looting= x.get(Math.floor((Math.random() * 10) + 1));
   
                        console.log(looting);
     window.location.href = "mailto:?to=info@santamonica.gov&subject="+ looting+"";  
