--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   function redirect()
 {console.log("hello");
   
-  var x = ["Looting information here", "a","b", "c","d", "e","f","dg","dh","di",];
+  var x = ["Looting information here", "a","b", "c","d", "e","f","dg","dh","di","kl"];
    /*  x[1] = "Looting information here";
     x[2] = "Info on looters";
     x[3] = "Looters on video";
