--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
   function redirect()
 {console.log("hello");
   
-  var x = ["Looting information here", "a","b", "c","d", "e","f","dg","dh","di","kl"];
-   /*  x[1] = "Looting information here";
-    x[2] = "Info on looters";
-    x[3] = "Looters on video";
-    x[4] = "Santa monica looters";
-    x[5] = "looters tip id";
-    x[6] = "id on looters in video";
-    x[7] = "Value";
-    x[8] = "Value";
-    x[9] = "Value";
-    x[10] = "Value"; */ 
+  var x = ["Looting information here", "Info on looters","Looters on video", "Santa monica looters","Looters tip id",
+           "Id on looters in video","Looters id in santa monica","Information on looters",
+           "Tip on looters","Looters during riots information","Information on looters in video"];
+    
     var num= Math.floor((Math.random() * 10) + 1);
  console.log(num);
     var looting= x[num];
