--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     var looting= x[num];
   
                        
-    window.location.href = "mailto:?to=info@santamonica.gov&subject="+ looting+"";  
+    window.location.href = "mailto:?to=info@santamonica.gov&subject="+ looting+"&body=Hello officers,\n \n\n I am not sure what else there is to say besides: \n https://giphy.com/gifs/rick-roll-g7GKcSzwQfugw";  
 }
 </script>
